# REFPROP-interop

./: .gitignore  .gitmodules  CMakeLists.txt  fit_ancillaries.py  interop.py
include/RPinterop/: interop.hpp
src/: main.cpp
